Added: number and password validation Fixed: pic position

--- a/client/css/regform.css
+++ b/client/css/regform.css
@@ -1,9 +1,21 @@
+nav {
+    display: flex;
+    justify-items: flex-end;
+    width: 100%;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .container{
     display: flex;
     flex-direction: row;
 }
 
-.photo-input{
+.photo-input, .info-input{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,19 +23,43 @@
     width: 50%;
 }
 
-.info-input{
+.img-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: auto;
-    width: 50%;
-
+    margin: 30px;
+    width: 600px;
+    height: 300px;
 }
 
 .user-pic {
-    margin: 30px;
     -webkit-clip-path: circle(150px at 50% 50%);
     clip-path: circle(150px at 50% 50%);
     max-width: 600px;
     max-height: 300px;
+}
+
+::-webkit-file-upload-button {
+    margin: 10px 0px;
+    background-color: aquamarine;
+    border: none;
+    border-radius: 10px;
+    width: 130px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.info-input input{
+    margin: 5px 0px;
+    height: 20px;
+}
+
+input[type="submit"]{
+    margin: 30px 0px;
+    background-color: aquamarine;
+    border: none;
+    border-radius: 10px;
+    width: 80px;
+    height: 30px;
+    cursor: pointer;
 }
